# homework4

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  modules.html  modules.js  namespacemembers.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html  print_ip.cpp  print_ip.h  test_print_ip_gtest.cpp
.github/workflows/: release.yml
d0/d30/: md_README.html
d1/d84/: group__helper__print__tuple.html  group__helper__print__tuple.js
d3/dd3/: structprint__ip__helper_1_1helper__print__tuple.html  structprint__ip__helper_1_1helper__print__tuple.js
d4/d47/: group__print__ip__helper.html  group__print__ip__helper.js
d5/d39/: namespaceprint__ip__helper.html  namespaceprint__ip__helper.js
d5/d6d/: structprint__ip__helper_1_1helper__print__tuple_3_010_01_4.html  structprint__ip__helper_1_1helper__print__tuple_3_010_01_4.js
d5/d7a/: group__is__vector__or__list.html  group__is__vector__or__list.js
d5/d7d/: classprint__ip-members.html
d6/d6a/: structprint__ip__helper_1_1is__vector__or__list_3_01std_1_1vector_3_01T_00_01Args_8_8_8_01_4_01_4.html
d6/d8a/: structprint__ip__helper_1_1helper__print__tuple-members.html
d6/de4/: structprint__ip__helper_1_1is__vector__or__list.html
d8/d8b/: structprint__ip__helper_1_1is__vector__or__list_3_01std_1_1list_3_01T_00_01Args_8_8_8_01_4_01_4.html
d9/da8/: test__print__ip__gtest_8cpp.html  test__print__ip__gtest_8cpp.js  test__print__ip__gtest_8cpp_source.html
da/d9e/: CMakeLists_8txt.html
da/ddd/: README_8md.html
dc/d8e/: print__ip_8cpp.html  print__ip_8cpp.js  print__ip_8cpp_source.html
search/: all_1.js  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_1.js  files_3.js  functions_1.js  functions_2.js  functions_4.js  groups_0.js  groups_1.js  groups_2.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
(+11 files in other folders)
